--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -24,14 +24,14 @@
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
 		<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
-		<script src="js/slider.js" type="text/javascript"></script>
+		<script src="{% static 'js/slider.js' %}" type="text/javascript"></script>
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="#">
 		<style>
 		#slider {
-			width:1200px;
-			height:500px;
+			width:865px;
+			height:487px;
 			}
 		</style>
 	    {%block head%} {%endblock%} <!--belki birşey oluştururuz diye block koyalım-->
@@ -43,7 +43,7 @@
     {%block slider%}  {% include 'slider.html'%} {%endblock%}
     {% block content %}  {% include 'content.html'%} {% endblock %}
     {% include 'footer.html' %}
-    {% block footer %} {% endblock %}
+    {% block foot %} {% endblock %}
 
 </body>
 </html>
