about,contact,references eklendi

--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -2,7 +2,7 @@
 <!-- footer -->
 			<footer>
 				<div class="container">
-					<p><a href="index.html">Home</a> | <a href="#work">works</a> | <a href="#team">Team</a> | <a href="contact.html">İletişim</a></p>
+					<p><a href="/index">Home</a> | <a href="#work">works</a> | <a href="#team">Team</a> | <a href="/iletisim">İletişim</a></p>
 					<div class="social">
 						<a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="https://twitter.com/Ramazan38031835"><i class="fa fa-twitter"></i></a>
