--- a/home/templates/hakkimizda.html
+++ b/home/templates/hakkimizda.html
@@ -14,9 +14,21 @@
 {% block header %}
     {% include "header.html" %}
 {% endblock %}
-{% block slider %}
-    {% include "slider.html" %}
-{% endblock %}
+
 {% block content %}
-    {% include "content.html" %}
+    <div id="breadcrumb">
+        <div class="container">
+            <ul class="breadcrumb">
+                <li><a href="/">Home</a> </li>
+                <li class="active">Hakkimizda</li>
+            </ul>
+        </div>
+    </div>
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                {{ setting.abouts|safe }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
