--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -16,11 +16,12 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="about.html" class="nav-item nav-link">About</a></li>
+								<li><a href="/index">Home</a></li>
+								<li><a href="/hakkimizda" class="nav-item nav-link">Hakkımızda</a></li>
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Yurtiçi <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="about.html" class="nav-item nav-link">Antalya</a></li>
+										<li><a href="/referanslar" class="nav-item nav-link">Antalya</a></li>
 										<li><a href="about.html" class="nav-item nav-link">Bartın</a></li>
 										<li><a href="about.html" class="nav-item nav-link">Nevşehir</a></li>
 									</ul>
@@ -34,7 +35,7 @@
 								</li>
 								<li><a href="registration.html">Signup</a></li>
 								<li><a href="login.html">Login</a></li>
-								<li><a href="contact.html" class="nav-item nav-link">İletişim</a></li>
+								<li><a href="/iletisim" class="nav-item nav-link">İletişim</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
 					</div><!-- /.container-fluid -->
