slider eklendi/düzenlenecek

--- a/TEMPS/gezi/css/style.css
+++ b/TEMPS/gezi/css/style.css
@@ -63,7 +63,7 @@ hr{
 .top-bar {
     position: relative;
     height: 90px;
-    background: #43A0AE;
+    background: #33ccff;
 }
 
 .top-bar .logo {
